# aoc

./: README.md
.github/workflows/: ci.yml  readme-stars.yml
2022/: pyproject.toml  test.py
2022/aoc/2024/day/01/: part1.py  part2.py
2022/aoc/2024/day/02/: part1.py  part2.py
2022/aoc/2024/day/03/: part1.py  part2.py
2022/aoc/2024/day/04/: part1.py  part2.py
2022/aoc/2024/day/05/: part1.py  part2.py
2022/aoc/2024/day/06/: part1.py  part2.py
2022/aoc/2024/day/07/: part1.py  part2.py
2022/aoc/2024/day/08/: part1.py  part2.py
2022/aoc/2024/day/09/: part1.py  part2.py
2022/aoc/2024/day/10/: part1.py  part2.py
2022/aoc/2024/day/11/: part1.py  part2.py
2022/aoc/2024/day/12/: part1.py  part2.py
2022/aoc/2024/day/13/: part1.py  part2.py
2022/aoc/2024/day/14/: part1.py  part2.py
2022/aoc/2024/day/15/: part1.py  part2.py
2022/aoc/2024/day/16/: part1.py  part2.py
2022/aoc/2024/day/25/: part1.py
2024/: .gitignore  .wezterm.lua  Cargo.toml  shell.nix
2024/data/puzzles/: 16.md
2024/src/template/: day.rs  mod.rs
2025/: Cargo.toml  README.md
